# ChangeLog for net-irc/supybot
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/supybot/ChangeLog,v 1.24 2007/08/30 12:42:47 phreak Exp $

  30 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing liquidx from metadata due to his retirement (see #171155 for
  reference).

  06 May 2007; Marius Mauch <genone@gentoo.org> supybot-0.83.2.ebuild:
  Replacing einfo with elog

  05 May 2007; Tiziano Müller <dev-zero@gentoo.org>
  -files/supybot-0.77.0-setup.py.patch, -supybot-0.83.1.ebuild:
  Dropped old version and old patch.

  20 Feb 2007; Raúl Porcel <armin76@gentoo.org> supybot-0.83.2.ebuild:
  x86 stable

  30 Dec 2006; Tiziano Müller <dev-zero@gentoo.org> -supybot-0.77.2.ebuild:
  Dropped old version.

  30 Dec 2006; Fabian Groffen <grobian@gentoo.org> supybot-0.77.2.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  25 Sep 2006; Javier Villavicencio <the_paya@gentoo.org>
  supybot-0.83.2.ebuild:
  Added ~x86-fbsd keyword.

  31 Aug 2006; Thomas Cort <tcort@gentoo.org> supybot-0.83.2.ebuild:
  Added ~amd64 wrt Bug #145138.

  22 Aug 2006; Alastair Tse <liquidx@gentoo.org> supybot-0.77.2.ebuild,
  -supybot-0.80.1.ebuild, -supybot-0.83.0_rc3.ebuild:
  cleanup and fix pysqlite deps for slotted pysqlite-2 (#82511)

  05 Aug 2006; Jason Wever <weeve@gentoo.org> supybot-0.83.2.ebuild:
  Added ~sparc keyword wrt bug #141096.

*supybot-0.83.2 (24 Jul 2006)

  24 Jul 2006; Alastair Tse <liquidx@gentoo.org> supybot-0.83.1.ebuild,
  +supybot-0.83.2.ebuild:
  version bump (#141606)

*supybot-0.83.1 (05 Nov 2005)

  05 Nov 2005; Alastair Tse <liquidx@gentoo.org> supybot-0.83.0_rc3.ebuild,
  +supybot-0.83.1.ebuild:
  version bump. modified sqlite dep to =dev-python/pysqlite-1\* (#99567)

*supybot-0.83.0_rc3 (25 Jun 2005)

  25 Jun 2005; Alastair Tse <liquidx@gentoo.org> -supybot-0.77.0.ebuild,
  -supybot-0.80.0_pre2.ebuild, supybot-0.80.1.ebuild,
  +supybot-0.83.0_rc3.ebuild: