@@ -1,4 +1,6 @@
 DIST Supybot-0.83.2.tar.bz2 376652 RMD160 43a802691c4eac23375b3fabcd2f8d6fc5ff49ad SHA1 575de6dbe4a1695c2f0df7dee97d33439c481609 SHA256 205ae6df58f70679373d81b8d4ddb634257665de6601eb9a0c2092c4d68ccd6b
+DIST Supybot-0.83.3.tar.bz2 382114 RMD160 f8f2fff7fb406d12c499cf6b974227e47c9907f1 SHA1 daa07fae5377234b599ec839012f03c0b8c491c4 SHA256 5689325a20b71d1d652f17bdc3eacdaf012a5c885831f9998c161c09d39d5810
 EBUILD supybot-0.83.2.ebuild 978 RMD160 52426b2eb96ebf10d7dcfae64165b4647bc15f48 SHA1 0d4d2ad2973b491b39c7a4a686704191a35ff658 SHA256 c0c0325c81c678f1d6da3b56376f9f6f6549f811623ff70289f5c836deba0ed5
-MISC ChangeLog 3605 RMD160 03e34be6f3dc5d9e78a85db1f85b52db03ca525b SHA1 7acec61c0b7939e9fc7b4f7f0f567e7bbf3c8f7a SHA256 98dc3fe51a44646e342df35788f0c92425e63423a1c96385d6b067e379419560
+EBUILD supybot-0.83.3.ebuild 955 RMD160 f70094be1db8853c0a4d20d6547ecdda2223acad SHA1 b75aa4bbbaf11bb1a90114d4434c8960ada9c5ad SHA256 ff8e86196a32dd761d842b2dae766e2bf1ab5c893257db998ca4a6a9799ccb07
+MISC ChangeLog 3726 RMD160 dd1ea882af9b58f7dfe5d4490776a1aed77a34d8 SHA1 4dc66500fa90a614d2401e6066ca91edfbd1cb2c SHA256 7240388b38e3c0ae0220f54e20b2425ff99670c5f1ba6b02aaddd0af5bae71e8
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
