@@ -1,6 +1,11 @@
 # ChangeLog for net-irc/supybot
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/supybot/ChangeLog,v 1.24 2007/08/30 12:42:47 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/supybot/ChangeLog,v 1.25 2007/12/04 09:24:25 hawking Exp $
+
+*supybot-0.83.3 (04 Dec 2007)
+
+  04 Dec 2007; Ali Polatel <hawking@gentoo.org> +supybot-0.83.3.ebuild:
+  Version bump.
 
   30 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
   Removing liquidx from metadata due to his retirement (see #171155 for
